--- a/researcherhome.html
+++ b/researcherhome.html
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="css/student.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <title> Researcher's Page </title>
+
+
+
+    
 </head>
 <body>
     <header class="research-navbar">
@@ -61,8 +65,8 @@
             <img src="asset/images/profile.png" alt="User Profile" class="profile-image">
             <div class="profile-info">
                 <h3>User Name</h3>
-                <p class="user-email">User Webmail</p>
-                <p class="user-id">User ID</p>
+                <p class="user-email my-0">User Webmail</p>
+                <p class="user-id my-0">User ID</p>
             </div>
         </div>
 
